--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="Grasshopper - Summation.js"></script>
+<script src="Simple_multiplication.js"></script>
 </body>
 </html>
