--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="Hello_Name_or_World!.js"></script>
+<script src="Remove_First_and_Last%20_Character.js"></script>
 </body>
 </html>
