--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="Remove_First_and_Last%20_Character.js"></script>
+<script src="Third_Angle_of_a_Triangle.js"></script>
 </body>
 </html>
