--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="Grasshopper_Personalized_Message.js"></script>
+<script src="BeginnerSeries%234Cockroach.js"></script>
 </body>
 </html>
