--- a/8kyu/index.html
+++ b/8kyu/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-<script src="MakeUpperCase.js"></script>
+<script src="Parse_nice_int_from_char_problem.js"></script>
 </body>
 </html>
