--- a/7kyu/index.html
+++ b/7kyu/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<script srs="Are You Playing Banjo.js"></script>
+
+<script src="Highest%20and%20LowestNOT.js"></script>
 </body>
 </html>
